--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   equatable: ^2.0.7
   intl: ^0.20.1
+  flutter_secure_storage: ^9.2.2
 
 
 dev_dependencies:
@@ -71,7 +72,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - images/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
